Fix spacing between buttons and links

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -28,6 +28,11 @@ input {
   margin-bottom: 16px;
 }
 
+.buttons {
+  display: flex;
+  gap: 16px;
+}
+
 .buttons button {
   padding: 12px;
 }
@@ -52,7 +57,7 @@ input {
   margin: 0px;
   padding: 0px;
   display: flex;
-  gap: 8px;
+  gap: 16px;
   list-style-type: none;
 }
 
@@ -60,11 +65,6 @@ input {
 .footer a {
   color: #666;
   text-decoration: none;
-}
-
-.footer .links {
-  display: flex;
-  gap: 30px;
 }
 
 .footer {
